<resources>
    <string name="label_back_to_previous_page">Kembali ke halaman sebelumnya</string>
    <string name="label_profile">Profil</string>
    <string name="label_cart">Keranjang</string>
    <string name="label_price">Harga</string>
    <string name="label_dummy_price">Rp 10.000</string>
    <string name="label_category">Kategori</string>
    <string name="label_product_detail">Detail Produk</string>
    <string name="label_add_to_cart">Tambah ke Keranjang</string>
    <string name="label_number_one">1</string>
    <string name="label_checkout">Proses</string>
    <string name="label_qty_price">Harga Satuan</string>
    <string name="label_select_category">Pilih kategori</string>
    <string name="label_add_product_quantity">Tambah kuantitas produk</string>
    <string name="label_reduce_product_quantity">Kurangi kuantitas produk</string>
    <string name="label_product_added_to_cart">Product telah tersimpan di keranjang</string>
    <string name="label_product_successfully_deleted">Produk sukses terhapus</string>
    <string name="label_delete_item">Hapus produk</string>
    <string name="label_close">Tutup</string>
    <string name="label_order_summary">Ringkasan Pesanan</string>
    <string name="label_item_sold">Item terjual</string>
    <string name="label_total_price">Total Harga</string>
    <string name="label_quantity">Kuantiti: </string>
    <string name="label_profile_not_ready">Profile belum siap, mohon dicoba kembali</string>
    <string name="label_hi_name_string">Halo, %1$s!</string>
    <string name="label_email_string">Email: %1$s</string>
    <string name="label_phone_string">Telepon: %1$s</string>
    <string name="label_address_string_int">Alamat: %1$s No. %2$d, %3$s +%4$s</string>
    <string name="label_total_price_string">Total Harga: %1$s</string>
    <string name="label_sold_item_string">Produk Terjual: %1$s</string>
    <string name="label_logout">Keluar</string>
    <string name="label_your_profile">Berikut sekilas profil mu</string>
    <string name="label_image_divider">Image Divider</string>
</resources>