<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_16sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_16sdp"
    tools:context=".ui.product_detail.ProductDetailActivity">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/label_back_to_previous_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/label_product_detail"
        app:layout_constraintBottom_toBottomOf="@+id/ibBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibBack"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ibBack"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvProductName"
        style="@style/BodyBoldLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProduct"
        tools:text="@string/label_title" />

    <TextView
        android:id="@+id/tvLabelCategory"
        style="@style/Caption"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="wrap_content"
        android:text="@string/label_category"
        app:layout_constraintBottom_toBottomOf="@+id/tvCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvCategory" />

    <TextView
        android:id="@+id/tvCategory"
        style="@style/BodyRegularMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLabelCategory"
        app:layout_constraintTop_toBottomOf="@+id/tvProductName"
        tools:text="@string/label_category" />

    <TextView
        android:id="@+id/tvLabelPrice"
        style="@style/Caption"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="wrap_content"
        android:text="@string/label_price"
        app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvPrice" />

    <TextView
        android:id="@+id/tvPrice"
        style="@style/BodyRegularMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLabelPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory"
        tools:text="@string/label_dummy_price" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/ibPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <ImageButton
        android:id="@+id/ibMinus"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/_3sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_minus"
        android:contentDescription="@string/label_reduce_product_quantity"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddToCart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnAddToCart" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_5sdp"
        android:background="@drawable/border_stroke_gray_no_fill"
        android:gravity="center"
        android:padding="@dimen/_2sdp"
        android:text="@string/label_number_one"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddToCart"
        app:layout_constraintStart_toEndOf="@+id/ibMinus"
        app:layout_constraintTop_toTopOf="@+id/btnAddToCart" />

    <ImageButton
        android:id="@+id/ibPlus"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/_3sdp"
        android:scaleType="centerCrop"
        android:layout_marginStart="@dimen/_5sdp"
        android:src="@drawable/ic_plus"
        android:contentDescription="@string/label_add_product_quantity"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddToCart"
        app:layout_constraintStart_toEndOf="@+id/tvCount"
        app:layout_constraintTop_toTopOf="@+id/btnAddToCart" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddToCart"
        style="@style/BaseCompatButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/label_add_to_cart"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibPlus" />

</androidx.constraintlayout.widget.ConstraintLayout>