<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProduct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_16sdp">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvProductName"
            app:layout_constraintBottom_toBottomOf="@+id/ibMinus"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvProductName"
            style="@style/BodyBoldMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivProduct"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/label_title" />

        <TextView
            android:id="@+id/tvCategory"
            style="@style/Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/label_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvProductName"
            app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

        <TextView
            android:id="@+id/tvLabelPrice"
            style="@style/BodyLightSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/label_qty_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvCategory"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

        <TextView
            android:id="@+id/tvPrice"
            style="@style/BodyBoldMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvProductName"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelPrice"
            tools:text="@string/label_dummy_price" />

        <ImageButton
            android:id="@+id/ibMinus"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_3sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_minus"
            android:contentDescription="@string/label_add_product_quantity"
            app:layout_constraintStart_toStartOf="@+id/tvPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice"/>

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@drawable/border_stroke_gray_no_fill"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:text="@string/label_number_one"
            app:layout_constraintBottom_toBottomOf="@+id/ibMinus"
            app:layout_constraintStart_toEndOf="@+id/ibMinus"
            app:layout_constraintTop_toTopOf="@+id/ibMinus" />

        <ImageButton
            android:id="@+id/ibPlus"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_3sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_plus"
            android:contentDescription="@string/label_reduce_product_quantity"
            app:layout_constraintBottom_toBottomOf="@+id/tvCount"
            app:layout_constraintStart_toEndOf="@+id/tvCount"
            app:layout_constraintTop_toTopOf="@+id/tvCount" />

        <ImageButton
            android:id="@+id/ibDelete"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/label_delete_item"
            android:padding="@dimen/_3sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@+id/ibPlus"
            app:layout_constraintStart_toEndOf="@+id/ibPlus"
            app:layout_constraintTop_toTopOf="@+id/ibPlus" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>