<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_3sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProduct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_16sdp">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvProductName"
            app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvProductName"
            style="@style/BodyBoldMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@+id/tvLabelQty"
            app:layout_constraintStart_toEndOf="@+id/ivProduct"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/label_title" />

        <TextView
            android:id="@+id/tvLabelQty"
            style="@style/BodyBoldMedium"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@+id/tvQty"
            app:layout_constraintTop_toTopOf="@+id/tvProductName"
            tools:text="@string/label_quantity" />

        <TextView
            android:id="@+id/tvQty"
            style="@style/BodyBoldMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvProductName"
            tools:text="@string/label_number_one" />

        <TextView
            android:id="@+id/tvCategory"
            style="@style/Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/label_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvProductName"
            app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

        <TextView
            android:id="@+id/tvLabelPrice"
            style="@style/BodyLightSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/label_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvCategory"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

        <TextView
            android:id="@+id/tvPrice"
            style="@style/BodyBoldMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvProductName"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelPrice"
            tools:text="@string/label_dummy_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>